# mcp-ai-events-ireland

./: LICENSE  README.md  events_api.py  pyproject.toml  run_mcp.py
